# surrealex

./: .taplo.toml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: enums.rs  internal_macros.rs  lib.rs  macros.rs  render.rs  structs.rs  traits.rs
src/builders/: create.rs  delete.rs  insert.rs  mod.rs  select.rs
src/types/: create.rs  delete.rs  insert.rs  mod.rs  select.rs
src/versioning/: mod.rs  select.rs
tests/: create.rs  delete.rs  insert.rs  mod.rs  select.rs
