[package]
name = "surrealex"
version = "0.3.0"
edition = "2024"
description = "Dead simple SurrealDB query generator"
readme = "README.md"
keywords = ["surrealdb", "surrealql", "query-builder", "rust"]
license = "MIT"
repository = "https://github.com/MordechaiHadad/surrealex"

[features]
macros = []

[dev-dependencies]
surrealex = { path = ".", features = ["macros"] }
